tests/NormalTests/paczka1/fuzzy1/44517734.err
Error in line 5: 3vjI6o S130 65,6
Error in line 19: 9hGFdt A486 69,9
Error in line 33: 5yXPTn S470 45,9
